# poetry-demo

./: README.md  pyproject.toml
.github/workflows/: ci.yml  m_release.yml  python-app.yml  python-app.ymlX  release.yml  semantic-release.yml
poetry_demo/: __init__.py  shapes_2d.py
tests/test_shapes_2d/: test_circle.py
